# Option-Chain-OrderBook-Backend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  README.tpl  config.toml
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
Docker/: Dockerfile  docker-compose.yml
crates/orderbook-client/: Cargo.toml  README.md
crates/orderbook-client/src/: client.rs  error.rs  lib.rs  types.rs  websocket.rs
crates/orderbook-client/src/client/: tests.rs
crates/orderbook-client/src/error/: tests.rs
crates/orderbook-client/src/types/: tests.rs
crates/orderbook-tests/: Cargo.toml  README.md
crates/orderbook-tests/src/: lib.rs
crates/orderbook-tests/tests/: auth.rs  errors.rs  financial.rs  health.rs  market_data.rs  market_maker.rs  orderbook.rs  orders.rs  positions.rs  snapshots.rs  websocket.rs
migrations/: 001_initial_schema.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  ohlc.rs  order_tracker.rs  simulation.rs  state.rs
src/api/: controls.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  websocket.rs
src/api/controls/: tests.rs
src/db/: mod.rs  pool.rs  schema.rs
src/error/: tests.rs
src/market_maker/: engine.rs  mod.rs  pricer.rs  quoter.rs
tests/fixtures/: dev-cert.pem  dev-private-key.pem
