[package]
name = "option-chain-orderbook-backend"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "REST API backend for Option Chain OrderBook"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/Option-Chain-OrderBook-Backend.git"

[workspace]
members = [
    ".",
    "crates/orderbook-client",
    "crates/orderbook-tests",
]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Option Chain OrderBook library
option-chain-orderbook = "0.2"
optionstratlib = "0.14"
orderbook-rs = "0.4"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
toml = "0.9"
rust_decimal = "1.40"
rust_decimal_macros = "1.40"
dashmap = "6.1"

[dev-dependencies]


[[bin]]
name = "option-chain-orderbook-backend"
path = "src/main.rs"

[lib]
name = "option_chain_orderbook_backend"
path = "src/lib.rs"
