[package]
name = "option-chain-orderbook-backend"
version = "0.4.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "REST API backend for Option Chain OrderBook"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/Option-Chain-OrderBook-Backend.git"

[workspace]
members = [
    ".",
    "crates/orderbook-client",
    "crates/orderbook-tests",
]

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Option Chain OrderBook library
option-chain-orderbook = { workspace = true }
optionstratlib = { workspace = true }
orderbook-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
toml = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }

# Authentication (JWT signed with an x509 key pair)
jsonwebtoken = { workspace = true }

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Option Chain OrderBook library
option-chain-orderbook = "0.5"
optionstratlib = "0.17"
orderbook-rs = { version = "0.9", features = ["special_orders"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# OpenAPI documentation
utoipa = { version = "5.5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
futures = "0.3"
parking_lot = "0.12"
toml = "1.1"
rust_decimal = "1.42"
rust_decimal_macros = "1.40"
dashmap = "6.2"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde_urlencoded = "0.7"

# Authentication (JWT signed with an x509 key pair).
# Pure-Rust crypto backend (`rust_crypto`) avoids a C toolchain dependency;
# `use_pem` enables loading keys/certs from PEM (incl. x509 CERTIFICATE blocks).
jsonwebtoken = { version = "10.4", default-features = false, features = ["use_pem", "rust_crypto"] }

[dev-dependencies]
# `test-util` enables paused/virtual time (`tokio::time::pause`,
# `#[tokio::test(start_paused = true)]`) for deterministic timer/cadence tests.
# Dev-only: the production binary keeps the workspace `full` feature set.
tokio = { workspace = true, features = ["test-util"] }


[[bin]]
name = "option-chain-orderbook-backend"
path = "src/main.rs"

[lib]
name = "option_chain_orderbook_backend"
path = "src/lib.rs"
