[package]
name = "orderbook-client"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "HTTP client library for Option Chain OrderBook API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/Option-Chain-OrderBook-Backend.git"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync"] }

# Error handling
thiserror = "2.0"

# URL handling
url = "2.5"
