[package]
name = "orderbook-client"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "HTTP client library for Option Chain OrderBook API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/Option-Chain-OrderBook-Backend.git"

[dependencies]
# HTTP client
reqwest = { workspace = true, features = ["json"] }

# WebSocket
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }

# Error handling
thiserror = { workspace = true }

# URL handling
url = { workspace = true }