[package]
name = "orderbook-tests"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Integration tests for Option Chain OrderBook API"
license = "MIT"
publish = false

[dependencies]
# Client library
orderbook-client = { path = "../orderbook-client" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Test utilities
futures-util = "0.3"

[dev-dependencies]
# Test framework
tokio-test = "0.4"
