[package]
name = "orderbook-tests"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Integration tests for Option Chain OrderBook API"
license = "MIT"
publish = false

[dependencies]
# Client library
orderbook-client = { path = "../orderbook-client" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
